spring-cloud/spring-cloud-eureka-server/kubernetes/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: spring-cloud-config-server-deployment
  labels:
    app: spring-cloud-config-server
spec:
  selector:
    matchLabels:
      app: spring-cloud-config-server
  replicas: 1
  template:
    metadata:
      labels:
        app: spring-cloud-config-server
    spec:
      containers:
      - name: config-server
        image: wenhao/spring-cloud-config-server:1.0.0
        ports:
        - containerPort: 8888
