spring-cloud/spring-cloud-eureka-server/kubernetes/service.yml
kind: Service
apiVersion: v1
metadata:
  name: spring-cloud-eureka-server-service
  labels:
    app: spring-cloud-eureka-server
spec:
  selector:
    app: spring-cloud-eureka-server
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8761
