spring-cloud/spring-cloud-eureka-server/kubernetes/ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: spring-cloud-eureka-server-ingress
spec:
  rules:
    - http:
        paths:
          - path: /*
            backend:
              serviceName: spring-cloud-eureka-server
              servicePort: 80
